hw stream api by komaru ЧОТЫРИ